--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,14 @@ jobs:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: '8.0.x'
           include-prerelease: true
           
       - name: Publish .NET Core Project
-        run: dotnet publish BlazorBarcodeSample.csproj -c Release -o release --nologo 
+        run: dotnet publish BlazorCaptureVision.csproj -c Release -o release --nologo 
         
-      - name: Change base-tag in index.html from / to blazor-barcode-qrcode-reader-scanner
-        run: sed -i 's/<base href="\/" \/>/<base href="\/blazor-barcode-qrcode-reader-scanner\/" \/>/g' release/wwwroot/index.html
+      - name: Change base-tag in index.html from / to blazor-barcode-mrz-document-scanner
+        run: sed -i 's/<base href="\/" \/>/<base href="\/blazor-barcode-mrz-document-scanner\/" \/>/g' release/wwwroot/index.html
         
       - name: copy index.html to 404.html
         run: cp release/wwwroot/index.html release/wwwroot/404.html
